<resources>
    <string name="app_name">CountryQuiz</string>

    <string name="submit">Submit</string>
    <string name="reset">Reset</string>

    <!-- Question Prompt -->
    <string name="question1">"Which country does the below flag represent?"</string>
    <string name="question2">"What is the capital for the country from Question 1?"</string>
    <string name="question3">"Which of the following cities belong to the country to Question 1?"</string>
    <string name="question4">"What is the money currency of the country in Question 1?"</string>

    <!-- Answer Choices -->
    <string name="flag_country_1">Greece</string>
    <string name="flag_country_2">Portugal</string>
    <string name="flag_country_3">Finland</string>
    <string name="flag_country_4">Malta</string>
    <string name="capital1">Paris</string>
    <string name="capital2">Hamburg</string>
    <string name="capital3">Oslo</string>
    <string name="capital4">Lisbon</string>
    <string name="city1">Lisbon</string>
    <string name="city2">Bordeaux</string>
    <string name="city3">Porto</string>
    <string name="city4">Leicester</string>

    <!-- Correct Answers -->
    <string name="correct1">Portugal</string>
    <string name="correct2">Lisbon</string>
    <string name="correct3a">Lisbon</string>
    <string name="correct3b">Porto</string>
    <string name="correct4">Euro</string>
</resources>
