<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Question 1 -->
        <TextView
            android:id="@+id/question_1"
            style="@style/QuestionHeaderStyle" />

        <TextView
            style="@style/QuestionPromptStyle"
            android:text="@string/question1"/>

        <ImageView
            android:id="@+id/country_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <RadioGroup
            android:id="@+id/flag_countries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/flag_country_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/flag_country_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/flag_country_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/flag_country_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>


        <!-- Question 2 -->
            <TextView
                android:id="@+id/question_2"
                style="@style/QuestionHeaderStyle"/>

            <TextView
                style="@style/QuestionPromptStyle"
                android:text="@string/question2"/>

            <RadioGroup
                android:id="@+id/capitals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <RadioButton
                    android:id="@+id/capital_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/capital_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/capital_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/capital_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        <!-- Question 3 -->


        <TextView
            android:id="@+id/question_3"
            style="@style/QuestionHeaderStyle"/>
        <TextView
            style="@style/QuestionPromptStyle"
            android:text="@string/question3"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/city_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <CheckBox
                android:id="@+id/city_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <CheckBox
                android:id="@+id/city_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <CheckBox
                android:id="@+id/city_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>


        <!-- Question 4 -->
            <TextView
                android:id="@+id/question_4"
                style="@style/QuestionHeaderStyle"/>
            <TextView
                style="@style/QuestionPromptStyle"
                android:text="@string/question4"/>

            <EditText
                android:id="@+id/currency_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Dollars"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"/>

        <!-- Final Submission -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:background="@color/colorAccent"
                android:onClick="submitAnswers"
                android:text="@string/submit"
                android:textColor="@color/text_icons" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:onClick="resetResponses"
                android:text="@string/reset"
                android:textColor="@color/text_icons"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>


